Ajout de l'autorité de certif

--- a/langs/fr_FR/history.lang
+++ b/langs/fr_FR/history.lang
@@ -38,3 +38,8 @@ PAYMENT_CUSTOMER_DELETE=Suppresion d'un paiement
 DeletedElement=Elements supprimés
 WholeObjectDeleted=Objet %s supprimé
 KoCheckPaymentValidity=Une erreur est détectée. La première ligne en erreur est certainement celle qui a été modifiée frauduleusement.
+OkCheckPaymentValidity=Clef de paiement valide avec l'historique local
+AddedByAuthority=Clef ajoutée à l'autorité de certification
+NotAddedByAuthorityYet=Clef pas encore ajoutée à l'autorité de certification
+SignatureOK=L'autorité confirme la validité de la signature des transaction (voir ci-dessous si des transactions sont corrompues localement)
+SignatureKO=L'autorité ne confirme pas l'authenticité de ces transactions
